[gd_scene load_steps=50 format=3 uid="uid://y5pvu2yfhasc"]

[ext_resource type="ArrayMesh" uid="uid://cqyknlesi5qor" path="res://Assets/mesh/walls/livingRoomMesh.mesh" id="1_3avgp"]
[ext_resource type="Texture2D" uid="uid://da0slhl6ty8hl" path="res://Assets/models/floor/Floor_Floor_Color.png" id="1_kggl8"]
[ext_resource type="PackedScene" uid="uid://bh2exf58tq2ry" path="res://Scenes/Menus/Zagadki/zagadka_z_lodówką.tscn" id="1_tcve0"]
[ext_resource type="PackedScene" uid="uid://lantpmginshd" path="res://Assets/models/livingRoom/Mug.glb" id="2_ojfkl"]
[ext_resource type="PackedScene" uid="uid://dfpdj7f2ekgrd" path="res://Assets/models/livingRoom/Newspaper.glb" id="3_ne18r"]
[ext_resource type="PackedScene" uid="uid://dqm52ay2af3vi" path="res://Assets/models/livingRoom/Armchair.glb" id="4_3avgp"]
[ext_resource type="PackedScene" uid="uid://ck2cx137x35hr" path="res://Assets/models/livingRoom/Sidetable.glb" id="5_b3ler"]
[ext_resource type="PackedScene" uid="uid://oiqc1sfh5q4n" path="res://Assets/models/livingRoom/Bank_Lamp.glb" id="6_tcve0"]
[ext_resource type="PackedScene" uid="uid://cy201miopb0aj" path="res://Assets/models/livingRoom/Chair.glb" id="7_h55ut"]
[ext_resource type="PackedScene" uid="uid://cyd2xa6tkyb34" path="res://Assets/models/livingRoom/Table.glb" id="8_d0abw"]
[ext_resource type="PackedScene" uid="uid://yy0vd016xecy" path="res://Assets/models/livingRoom/Wind_Machine.glb" id="9_xe3cf"]
[ext_resource type="PackedScene" uid="uid://cotl0q37fo3iv" path="res://Assets/models/livingRoom/Dresser.glb" id="10_xrcs0"]
[ext_resource type="PackedScene" uid="uid://ceapin468e1vd" path="res://Assets/models/kitchen/Fridge.glb" id="11_dfkgh"]
[ext_resource type="PackedScene" uid="uid://0hgnlmika5yy" path="res://Assets/models/kitchen/Kitchentop_above_Fridge.glb" id="12_l2l7r"]
[ext_resource type="Script" uid="uid://cxntbhm1ymdls" path="res://Scenes/Locations/AlphaLocations/lodówka.gd" id="12_tcve0"]
[ext_resource type="PackedScene" uid="uid://bptcvksgi6ybj" path="res://Assets/models/kitchen/Kitchentop.glb" id="13_8lh5a"]
[ext_resource type="PackedScene" uid="uid://di56sbmlfn4ne" path="res://Assets/models/kitchen/Oven.glb" id="14_30i0a"]
[ext_resource type="Script" uid="uid://cd5siook8ljli" path="res://Scenes/Locations/AlphaLocations/piec.gd" id="15_d0abw"]
[ext_resource type="PackedScene" uid="uid://d2j7e2sjv878e" path="res://Assets/models/kitchen/Dishrack.glb" id="15_ksdw2"]
[ext_resource type="PackedScene" uid="uid://gqr3r5vlxgu4" path="res://Assets/models/kitchen/Countertop_sink.glb" id="16_habwp"]
[ext_resource type="PackedScene" uid="uid://bqp0yhsvbkql7" path="res://Assets/models/kitchen/Countertop_by_Oven.glb" id="17_fho88"]
[ext_resource type="PackedScene" uid="uid://8spcs4tp4qn5" path="res://Assets/models/kitchen/Countertop_by_Fridge.glb" id="18_7ood7"]
[ext_resource type="PackedScene" uid="uid://dy6618ucep6ps" path="res://Assets/models/kitchen/Cooker_Hood.glb" id="19_7j5s5"]
[ext_resource type="PackedScene" uid="uid://x5kflk7uqah7" path="res://Assets/models/kitchen/Pan.glb" id="20_rkx84"]
[ext_resource type="PackedScene" uid="uid://wgt3vja34xxd" path="res://Assets/models/kitchen/Pot.glb" id="21_ecysp"]
[ext_resource type="PackedScene" uid="uid://bgmp0s0yqctpj" path="res://Scenes/Entities/Player/gracz.tscn" id="22_ytskt"]
[ext_resource type="PackedScene" uid="uid://dmlbv0me1a7h4" path="res://Assets/models/doors/Door_Main.glb" id="23_ojfkl"]
[ext_resource type="PackedScene" uid="uid://dmny36eu2idf6" path="res://Assets/models/doors/Door_Bathroom.glb" id="24_ne18r"]
[ext_resource type="PackedScene" uid="uid://c022k2pduvwhn" path="res://Scenes/Menus/equipment_bar/equipment.tscn" id="28_h55ut"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fkxop"]
size = Vector3(10, 0.2, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kggl8"]
albedo_color = Color(0.439216, 0.172549, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_dd2pb"]
material = SubResource("StandardMaterial3D_kggl8")
size = Vector3(7.3, 0.2, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ojfkl"]
albedo_color = Color(0.439216, 0.172549, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_r8n4t"]
material = SubResource("StandardMaterial3D_ojfkl")
size = Vector3(10, 0.2, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_whffc"]
size = Vector3(7.2, 0.2, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ne18r"]
albedo_color = Color(0.439216, 0.172549, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ps3pg"]
material = SubResource("StandardMaterial3D_ne18r")
size = Vector3(7.2, 0.2, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_m400d"]
size = Vector3(3.8, 0.1, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3avgp"]
albedo_color = Color(0.439216, 0.172549, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_i4nt6"]
material = SubResource("StandardMaterial3D_3avgp")
size = Vector3(3.8, 0.1, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_mvd6j"]
size = Vector3(5, 0.1, 5.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b3ler"]
albedo_color = Color(0.439216, 0.172549, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_cy884"]
material = SubResource("StandardMaterial3D_b3ler")
size = Vector3(5, 0.1, 5.2)

[sub_resource type="NavigationMesh" id="NavigationMesh_nkw2w"]
vertices = PackedVector3Array(-4.5, 0.02, -4.5, -4.5, 0.02, 4.5, 4.5, 0.02, 4.5, 4.5, 0.02, -4.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
cell_height = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w5rb0"]
albedo_texture = ExtResource("1_kggl8")

[sub_resource type="PlaneMesh" id="PlaneMesh_umunx"]
size = Vector2(10, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_eiu4k"]
size = Vector3(10, 0, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_tcve0"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_d0abw"]

[node name="LivingRoom" type="Node3D"]

[node name="zagadka z lodówką" parent="." instance=ExtResource("1_tcve0")]
visible = false

[node name="sciany" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -9.48273, 20.6216, -1.42433)

[node name="sciana" type="StaticBody3D" parent="sciany"]
transform = Transform3D(1, 0, 0, 0, 1, -8.35187e-23, 0, -8.35187e-23, 1, -0.093556, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="sciany/sciana"]
transform = Transform3D(1, 0, 0, 0, 1, -8.35187e-23, 0, -8.35187e-23, 1, -1.38546, 0.00138474, 0)
shape = SubResource("BoxShape3D_fkxop")

[node name="MeshInstance3D" type="MeshInstance3D" parent="sciany/sciana/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0108871, -0.00138474, 0)
mesh = SubResource("BoxMesh_dd2pb")
skeleton = NodePath("../..")

[node name="sciana2" type="StaticBody3D" parent="sciany"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, -1, -4.37114e-08, 4.37114e-08, 4.37114e-08, 4.37114e-08, 1, -5, 5, -2.38419e-07)

[node name="CollisionShape3D" type="CollisionShape3D" parent="sciany/sciana2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0108871, 0.00138474, 0)
shape = SubResource("BoxShape3D_fkxop")

[node name="MeshInstance3D" type="MeshInstance3D" parent="sciany/sciana2/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, -8.35188e-23, 1, 0.0108871, -0.00138474, 0)
mesh = SubResource("BoxMesh_r8n4t")
skeleton = NodePath("../..")

[node name="sciana3" type="StaticBody3D" parent="sciany"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="sciany/sciana3"]
transform = Transform3D(1, 0, 0, 0, 1, -8.35187e-23, 0, -8.35187e-23, 1, -1.46141, 9.91323, -0.0254631)
shape = SubResource("BoxShape3D_whffc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="sciany/sciana3/CollisionShape3D"]
mesh = SubResource("BoxMesh_ps3pg")

[node name="sciana4" type="StaticBody3D" parent="sciany"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="sciany/sciana4"]
transform = Transform3D(1, 0, 0, 0, 1, -8.35187e-23, 0, -8.35187e-23, 1, -3.22009, 5.20602, 0)
shape = SubResource("BoxShape3D_m400d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="sciany/sciana4/CollisionShape3D"]
mesh = SubResource("BoxMesh_i4nt6")

[node name="sciana5" type="StaticBody3D" parent="sciany"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="sciany/sciana5"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 1.64203e-15, -4.37114e-08, -1, -1, -4.37119e-08, 3.55271e-15, -1.39458, 2.6739, -0.0528049)
shape = SubResource("BoxShape3D_mvd6j")

[node name="MeshInstance3D" type="MeshInstance3D" parent="sciany/sciana5/CollisionShape3D"]
transform = Transform3D(1, 0, 2.68703e-16, 0, 1, 0, 2.68657e-16, 0, 1, 0, 1.86265e-09, 0.0155072)
mesh = SubResource("BoxMesh_cy884")

[node name="sciana6" type="StaticBody3D" parent="sciany"]
transform = Transform3D(-3.49691e-09, -8.36651e-17, -0.08, 0.08, -3.49691e-09, -3.49691e-09, -3.49691e-09, -0.08, 6.91898e-17, 2.30348, 5.70585, 3.79493)

[node name="MeshInstance3D" type="MeshInstance3D" parent="sciany/sciana6"]
transform = Transform3D(6.01866e-14, -1.09278e-06, 220, -31.5, -1.09278e-06, -5.86796e-20, 1.37691e-06, -25, -9.61651e-06, 10.3529, 47.6867, 0.398487)
mesh = ExtResource("1_3avgp")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.49668, 18.1216, 0.917964)
navigation_mesh = SubResource("NavigationMesh_nkw2w")
navigation_layers = 4

[node name="Floor" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, -4.09273e-12, 2.98023e-08, 5.00222e-12, 1, 3.63798e-12, 2.98023e-08, 8.6402e-12, 1, 0, 0, 0)
collision_layer = 5
collision_mask = 5
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Floor"]
layers = 4
material_override = SubResource("StandardMaterial3D_w5rb0")
mesh = SubResource("PlaneMesh_umunx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Floor"]
shape = SubResource("BoxShape3D_eiu4k")

[node name="LivingArea" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0871315, 0)

[node name="Mug" parent="LivingArea" instance=ExtResource("2_ojfkl")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Newspaper" parent="LivingArea" instance=ExtResource("3_ne18r")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Armchair" parent="LivingArea" instance=ExtResource("4_3avgp")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Sidetable" parent="LivingArea" instance=ExtResource("5_b3ler")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Bank_Lamp" parent="LivingArea" instance=ExtResource("6_tcve0")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Chair" parent="LivingArea" instance=ExtResource("7_h55ut")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Chair2" parent="LivingArea" instance=ExtResource("7_h55ut")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 1.16448)

[node name="Chair3" parent="LivingArea" instance=ExtResource("7_h55ut")]
transform = Transform3D(0.0207055, 0, -0.0772741, 0, 0.08, 0, 0.0772741, 0, 0.0207055, 0.958539, 0, 1.20667)

[node name="Table" parent="LivingArea" instance=ExtResource("8_d0abw")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Wind_Machine" parent="LivingArea" instance=ExtResource("9_xe3cf")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Dresser" parent="LivingArea" instance=ExtResource("10_xrcs0")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Kitchen" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.101826, 0)

[node name="Lodówka" type="Node3D" parent="Kitchen"]
script = ExtResource("12_tcve0")

[node name="Fridge" parent="Kitchen/Lodówka" instance=ExtResource("11_dfkgh")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="PickUpRange" type="Area3D" parent="Kitchen/Lodówka"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.90869, 20.7524, -2.0132)
collision_layer = 2
collision_mask = 2
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Kitchen/Lodówka/PickUpRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.539499, -1.6298, -0.322864)
shape = SubResource("BoxShape3D_tcve0")

[node name="terenDoKlikniecia" type="StaticBody3D" parent="Kitchen/Lodówka"]
transform = Transform3D(1.11697, 0, 0, 0, 2.28809, 0, 0, 0, 1, -8.70345, 19.6716, -2.5999)
collision_layer = 5
collision_mask = 5

[node name="terenDoKlikniecia" type="CollisionShape3D" parent="Kitchen/Lodówka/terenDoKlikniecia"]
shape = SubResource("BoxShape3D_d0abw")

[node name="Piec" type="Node3D" parent="Kitchen"]
script = ExtResource("15_d0abw")

[node name="Oven" parent="Kitchen/Piec" instance=ExtResource("14_30i0a")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="PickUpRange" type="Area3D" parent="Kitchen/Piec"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.23331, 20.7524, -2.0132)
collision_layer = 2
collision_mask = 2
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Kitchen/Piec/PickUpRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.539499, -1.6298, -0.322864)
shape = SubResource("BoxShape3D_tcve0")

[node name="terenDoKlikniecia" type="StaticBody3D" parent="Kitchen/Piec"]
transform = Transform3D(1.26759, 0, 0, 0, 1.47523, 0, 0, 0, 1, -3.831, 18.8417, -2.69798)

[node name="terenDoKlikniecia" type="CollisionShape3D" parent="Kitchen/Piec/terenDoKlikniecia"]
shape = SubResource("BoxShape3D_d0abw")

[node name="Kitchentop_above_Fridge" parent="Kitchen" instance=ExtResource("12_l2l7r")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Kitchentop" parent="Kitchen" instance=ExtResource("13_8lh5a")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Dishrack" parent="Kitchen" instance=ExtResource("15_ksdw2")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Countertop_sink" parent="Kitchen" instance=ExtResource("16_habwp")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Countertop_by_Oven2" parent="Kitchen" instance=ExtResource("17_fho88")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Countertop_by_Fridge" parent="Kitchen" instance=ExtResource("18_7ood7")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Cooker_Hood" parent="Kitchen" instance=ExtResource("19_7j5s5")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Pan" parent="Kitchen" instance=ExtResource("20_rkx84")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Pot" parent="Kitchen" instance=ExtResource("21_ecysp")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)

[node name="Doors" type="Node3D" parent="."]

[node name="Door_Main" parent="Doors" instance=ExtResource("23_ojfkl")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0.149125, -0.127224, 0)

[node name="Door_Main2" parent="Doors" instance=ExtResource("23_ojfkl")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 9.79666, -0.127224, 0)

[node name="Door_Bathroom" parent="Doors" instance=ExtResource("24_ne18r")]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, -0.12908)

[node name="Camera3D" type="Camera3D" parent="." groups=["Cameras"]]
transform = Transform3D(-0.87462, -0.317425, 0.366445, 0, 0.755853, 0.654741, -0.48481, 0.572649, -0.661084, -0.004, 22.372, -2.521)
fov = 90.0

[node name="Gracz" parent="." instance=ExtResource("22_ytskt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.98725, 19.319, -1.0544)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, -2.72848e-12, 2.72968e-23, 2.72848e-12, 1, -1.00044e-11, 0, 1.00044e-11, 1, -5.53118, 26.3866, -1.46353)
light_energy = 4.159
omni_range = 34.5848

[node name="Equipment" parent="." instance=ExtResource("28_h55ut")]

[connection signal="area_entered" from="Kitchen/Lodówka/PickUpRange" to="Kitchen/Lodówka" method="_on_pick_up_range_area_entered"]
[connection signal="area_exited" from="Kitchen/Lodówka/PickUpRange" to="Kitchen/Lodówka" method="_on_pick_up_range_area_exited"]
[connection signal="input_event" from="Kitchen/Lodówka/terenDoKlikniecia" to="Kitchen/Lodówka" method="_on_teren_do_klikniecia_input_event"]
[connection signal="area_entered" from="Kitchen/Piec/PickUpRange" to="Kitchen/Piec" method="_on_pick_up_range_area_entered"]
[connection signal="area_exited" from="Kitchen/Piec/PickUpRange" to="Kitchen/Piec" method="_on_pick_up_range_area_exited"]
[connection signal="input_event" from="Kitchen/Piec/terenDoKlikniecia" to="Kitchen/Piec" method="_on_teren_do_klikniecia_input_event"]
